--- a/README
+++ b/README
@@ -9,7 +9,7 @@ To compile the plugin, run
 
 	$ make all
 
-You will need pidgin delevopment packages
+You will need pidgin development packages
 (link in ubuntu: libpurple-dev and pidgin-dev).
 
 
